---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - list
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt-list - List worktrees and optionally branches
Usage: wt list [OPTIONS]

Options:
  --format <FORMAT>              
      Output format (table, json)
                                 
      [default: table]           

  --branches                            
      Include branches without worktrees

  --remotes                                      
      Include remote branches from primary remote

  --full                       
      Show CI, conflicts, diffs

  --progressive                              
      Force progressive (or --no-progressive)

  -C <path>
      Change working directory

  -v, --verbose
      Show commands and debug info

  -h, --help
      Print help (see a summary with '-h')

[38;5;10mCOLUMNS[39m

- Branch: Branch name
- Status: Quick status symbols (see STATUS SYMBOLS below)
- HEAD±: Uncommitted changes vs HEAD (+added -deleted lines, staged + unstaged)
- main↕: Commit count ahead↑/behind↓ relative to main (commits in HEAD vs main)
- main…± (--full): Line diffs in commits ahead of main (+added -deleted)
- Path: Worktree directory location
- Remote⇅: Commits ahead↑/behind↓ relative to tracking branch (e.g. 
origin/branch)
- CI (--full): CI pipeline status (tries PR/MR checks first, falls back to 
branch workflows)
  - [32m●[0m passed (green) - All checks passed
  - [34m●[0m running (blue) - Checks in progress
  - [31m●[0m failed (red) - Checks failed
  - [33m●[0m conflicts (yellow) - Merge conflicts with base
  - [90m●[0m no-ci (gray) - PR/MR or workflow found but no checks configured
  - (blank) - No PR/MR or workflow found, or gh/glab CLI unavailable
  - (dimmed) - Stale: unpushed local changes differ from PR/MR head
- Commit: Short commit hash (8 chars)
- Age: Time since last commit (relative)
- Message: Last commit message (truncated)

[38;5;10mSTATUS SYMBOLS[39m

Order: ?!+»✘ ✖⚠≡∅ ↻⋈ ↑↓↕ ⇡⇣⇅ ⎇⌫⊠

- [36m?[0m Untracked files present
- [36m![0m Modified files (unstaged changes)
- [36m+[0m Staged files (ready to commit)
- [36m»[0m Renamed files
- [36m✘[0m Deleted files
- [31m✖[0m Merge conflicts - unresolved conflicts in working tree (fix before 
continuing)
- [33m⚠[0m Would conflict - merging into main would fail
- [2m≡[0m Working tree matches main (identical contents, regardless of commit history)
- [2m∅[0m No commits (no commits ahead AND no uncommitted changes)
- [33m↻[0m Rebase in progress
- [33m⋈[0m Merge in progress
- ↑ Ahead of main branch
- ↓ Behind main branch
- ↕ Diverged (both ahead and behind main)
- ⇡ Ahead of remote tracking branch
- ⇣ Behind remote tracking branch
- ⇅ Diverged (both ahead and behind remote)
- ⎇ Branch indicator (shown for branches without worktrees)
- ⌫ Prunable worktree (directory missing, can be pruned)
- [33m⊠[0m Locked worktree (protected from auto-removal)

Rows are dimmed when no unique work (≡ matches main OR ∅ no commits).

[38;5;10mJSON OUTPUT[39m

Use --format=json for structured data. Each object contains two status maps
with the same fields in the same order as STATUS SYMBOLS above:

status - variant names for querying:
- working_tree: {untracked, modified, staged, renamed, deleted} booleans
- branch_state: "" | "Conflicts" | "MergeTreeConflicts" | "MatchesMain" | 
"NoCommits"
- git_operation: "" | "Rebase" | "Merge"
- main_divergence: "" | "Ahead" | "Behind" | "Diverged"
- upstream_divergence: "" | "Ahead" | "Behind" | "Diverged"
- user_status: string (optional)

status_symbols - Unicode symbols for display (same fields, plus worktree_attrs: 
⎇/⌫/⊠)

Note: locked and prunable are top-level fields on worktree objects, not in 
status.

Query examples:

  # Find worktrees with conflicts
  jq '.[] | select(.status.branch_state == "Conflicts")'

  # Find worktrees with untracked files
  jq '.[] | select(.status.working_tree.untracked)'

  # Find worktrees in rebase or merge
  jq '.[] | select(.status.git_operation != "")'

  # Get branches ahead of main
  jq '.[] | select(.status.main_divergence == "Ahead")'

  # Find locked worktrees
  jq '.[] | select(.locked != null)'

----- stderr -----
